...
    <string name="open_collective">Open Collective</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="litecoin">Litecoin</string>
    <string name="taler">Taler</string>

    <string name="SignatureMismatch">The new version is signed with a different key to the old one. To install the new
        version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase
        any internal data stored by the app)
    </string>
    <string name="installIncompatible">App incompatible with your device, install anyway?</string>
    <string name="version">Version</string>
    <!-- Used in app details page to show who is the author of the app -->
    <string name="by_author_format">by %s</string>
...
    <string name="signer_colon">Signer: %1$s</string>
    <string name="architectures_colon">Architectures: %1$s</string>
    <string name="app_details_incompatible_version">Incompatible • Installation likely to fail</string>
    <string name="app_details_incompatible_signer">Signature mismatch, can\'t install</string>
    <string name="app_details_install_error_text">Sorry! There was an unexpected error installing this app</string>

    <string name="installed_apps__activity_title">Installed apps</string>
    <string name="apps_updates_hint_title">Congratulations 🥳</string>
    <string name="apps_updates_hint_text">All your apps are up to date</string>
    <!-- Should be exactly the same as the standard word for "Share" throughout Android and apps -->
    <string name="send_installed_apps">Share installed apps</string>

    <!-- This is a button label, it must be the right size, or the layout gets messed up. It should ideally be 10-20 characters. -->
...
    <string name="has_disallow_install_unknown_sources_globally">Your device admin doesn\'t allow installing apps from unknown sources, that includes new repos</string>
    <!-- Message presented in a dialog box when the user restriction set by the system restricts adding new repos, e.g. "Unknown Sources". -->
    <string name="has_disallow_install_unknown_sources">Unknown sources can\'t be added by this user, that includes new repos</string>

    <string name="repositories_last_update_never">never</string>
    <!-- This should be exactly the same as the standard word for Settings throughout Android and apps -->
    <string name="menu_settings">Settings</string>
    <!-- This should be exactly the same as the standard word for a Search action throughout Android and apps -->
    <string name="menu_search">Search</string>
    <string name="menu_add_repo">New repository</string>

    <!-- This is like "launch" but for files and documents rather than apps -->
    <string name="menu_open">Open</string>
...
    <!-- The title for the link that points to the source code for this app -->
    <string name="menu_source">Source code</string>
    <!-- The title for the link that points to the translation service for this app -->
    <string name="menu_translation">Translation</string>
    <string name="menu_upgrade">Update</string>
    <!-- The button label -->
    <string name="main_menu__categories">Categories</string>
    <!-- The button label.  Should be the same term used in the Google Nearby Settings -->
    <string name="main_menu__swap_nearby">Nearby</string>

    <string name="antiknownvulnlist">This app contains a known security vulnerability</string>
    <string name="display">Display</string>

    <string name="search_my_apps_hint">Search installed apps</string>

...
