<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MenuTitle">
    <item
        android:id="@+id/latest"
        android:enabled="true"
        android:icon="@drawable/ic_latest"
        android:orderInCategory="0"
        android:title="@string/main_menu__latest_apps"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/categories"
        android:enabled="true"
        android:icon="@drawable/ic_categories"
        android:orderInCategory="1"
        android:title="@string/main_menu__categories"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/updates"
        android:enabled="true"
        android:icon="@drawable/ic_updates"
        android:orderInCategory="2"
        android:title="@string/main_menu__updates"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="3"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom|withText" />
</menu>