<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_to_refresh">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<org.fdroid.fdroid.views.BannerUpdatingRepos
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />-->

            <TextView
                android:id="@+id/empty_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AppListEmptyText"
                android:visibility="gone"
                tools:text="@string/latest__empty_state__no_recent_apps"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/app_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/app_card_normal"
                android:scrollbars="vertical" />

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

    <include layout="@layout/fab_search" />

</android.support.design.widget.CoordinatorLayout>
